# custard-dlt

./: .gitignore  .prefectignore  README.md  get_events_between.py  main.py  prefect.yaml  pyproject.toml  requirements.txt  sql_database_pipeline.py
flows/: generate_schedule_agreements.py  replicate_postgres_raw.py  replicate_postgres_to_duckdb.py
flows/utils/: pkey.py  ssh_tunnel.py
